# paprika-recipes

./: .gitignore  readme.md  requirements.txt  setup.cfg
.github/workflows/: lint.yml  release.yml
paprika_recipes/: cache.py  command.py  remote.py  types.py  user_agent.py
