[metadata]
name = paprika-recipes
author = Adam Coddington
author-email = me@adamcoddington.net
summary = Easily view and edit the contents of exports from the Paprika app.
description-file = readme.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/coddingtonbear/paprika-recipes/
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.13

[files]
packages =
    paprika_recipes

[entry_points]
console_scripts =
    paprika-recipes = paprika_recipes.cmdline:main
paprika_recipes.commands =
    extract-archive = paprika_recipes.commands.extract_archive:Command
    create-archive = paprika_recipes.commands.create_archive:Command
    store-password = paprika_recipes.commands.store_password:Command
    download-recipes = paprika_recipes.commands.download_recipes:Command
    upload-recipes = paprika_recipes.commands.upload_recipes:Command
    create-recipe = paprika_recipes.commands.create_recipe:Command
    edit-recipe = paprika_recipes.commands.edit_recipe:Command

[flake8]
# https://github.com/ambv/black#line-length
max-line-length = 88
# E203: whitespace before ':' (defer to black)
# E231: missing whitespace after ',' (defer to black)
# E501: line length (defer to black)
# W503: break before binary operators (defer to black)
# A003: [builtins] allow class attributes to be named after builtins (e.g., `id`)
# E704: multiple statements on one line (def) - common for abstract method stubs
ignore = E203,E231,E501,W503,A003,E704
exclude =
  migrations,

[pep8]
max-line-length = 88
# E701: multiple statements on one line (flags py3 inline type hints)
ignore = E701

[pydocstyle]
# Harvey's initial attempt at pydocstyle rules. Please suggest improvements!
# The `(?!\d{4}_)` pattern is a hacky way to exclude migrations, since pydocstyle doesn't
# have an `exclude` option. https://github.com/PyCQA/pydocstyle/issues/175
match = (?!test_)(?!\d{4}_).*\.py

# See http://www.pydocstyle.org/en/5.0.1/error_codes.html
# D100: docstring in public module (we don't have a practice around this)
# D104: docstring in public package (we don't have a practice around this)
# D105: docstring in magic method
# D107: docstring in __init__ method
# D203: Blank line required before class docstring
# D213: Multi-line docstring summary should start at the second line (need to choose D212 or D213)
# D302: Use u""" for Unicode docstrings
ignore = D100,D104,D105,D107,D203,D213,D302
